export interface Material {
    id: number,
    name: string,
    uri: string,
    type: string,
    postId?: number
}