@startuml StayOn_Class_Diagram
skinparam classAttributeIconSize 0

class User {
  - id: Integer
  - email: String
  - password: String
  - firstName: String
  - middleName: String
  - lastName: String
  - secondLastName: String
  - major: String
  - role: String
  - age: Integer
  --
  +getAllUsers()
  +getUser()
  +createUser()
  +updateUser()
  +deleteUser()
  +login()
  +requestPasswordReset()
  +changePassword()
}

class Post {
  - id: Integer
  - message: Text
  - date: Date
  - userId: Integer
  - topicId: Integer
  --
  +getAllPosts()
  +getPostById()
  +getPostsByUser()
  +createPost()
  +updatePost()
  +deletePost()
  +getPostsByUserPreferences()
}

class Comment {
  - id: Integer
  - message: Text
  - date: Date
  - userId: Integer
  - postId: Integer
  --
  +getAllComments()
  +createComment()
  +getCommentById()
  +getCommentsByPost()
  +updateComment()
  +deleteComment()
}

class Material {
  - id: Integer
  - name: String
  - uri: String
  - type: String
  - postId: Integer
}

class Topic {
  - id: Integer
  - name: String
  --
  +getAllTopics()
  +getTopicById()
  +createTopic()
  +updateTopic()
  +deleteTopic()
  +getPostsByTopic()
}

class Follower {
  - followerId: Integer
  - followedId: Integer
  --
  +followUser()
  +unfollowUser()
  +getFollowers()
  +getFollowing()
}

class Preference {
  - userId: Integer
  - topicId: Integer
  --
  +getAllPreferences()
  +getUserPreferences()
  +createPreference()
  +deleteUserPreference()
}

class Meeting {
  - id: Integer
  - title: String
  - description: Text
  - url: String
  - date: Date
  - userId: Integer
  - createdAt: Date
  - updatedAt: Date
  --
  +getAllMeetings()
  +getMeeting()
  +createMeeting()
  +updateMeeting()
  +deleteMeeting()
  +getMeetingsByUser()
  +getActiveMeetings()
  +deactivateMeeting()
}

class Score {
  - id_scored: Integer
  - id_scorer: Integer
}

class Profile {
  --
  +getProfile()
}

' Relationships
User "1" -- "*" Post : creates
User "1" -- "*" Meeting : organizes
User "1" -- "*" Comment : writes
User "1" -- "*" Follower : follows >
User "1" -- "*" Follower : is followed by <
User "1" -- "*" Preference : has

Post "1" -- "*" Comment : receives
Post "1" -- "*" Material : contains
Post "1" -- "1" Topic : belongs to
Comment "*" -- "1" Post : on
Comment "*" -- "1" User : by
Material "*" -- "1" Post : for
Meeting "*" -- "1" User : organized by
Preference "*" -- "1" Topic : for
Preference "*" -- "1" User : by
Follower "*" -- "1" User : follower
Follower "*" -- "1" User : followed
Score "*" -- "1" User : scored
Score "*" -- "1" User : scorer
Profile "1" -- "1" User : is
@enduml
